# R-Type

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_packages.py  compile.sh  debug  justfile  package.json
Client/: CMakeLists.txt  README.md
Client/configs/: BGM.json  SFX.json
Client/include/: menu.hh  rtype.hh
Client/include/rtype/: Client.hh  Client.hpp  Menu.hh  NetworkManager.hh  Registry.hpp  SparseArray.hpp  client.hh
Client/include/rtype/Background/: BackgroundManager.hh
Client/include/rtype/Components/: TagComponent.hpp  TransformComponent.hpp
Client/include/rtype/Factory/: ClientEntityFactory.hh
Client/include/rtype/Network/: NetworkManager.hh  ThreadPool.hh
Client/include/rtype/Systems/: AudioSystem.hpp  TransformSystem.hpp
Client/include/rtype/components/: Room.hh
Client/include/rtype/config/: ArgsConfig.hh  ConfigsFile.hh
Client/include/rtype/scenes/: Game.hh  IScene.hh  Lounge.hh  Menu.hh  PauseMenu.hh
Client/src/: NetworkManager.cpp  main.cpp  menu.cpp  networkManager.cpp
Client/src/Factory/: ClientEntityFactory.cpp
Client/src/rtype/: Client.cpp  Entity.cpp  Menu.cpp
Client/src/rtype/Background/: BackgroundManager.cpp
Client/src/rtype/Network/: NetworkManager.cpp  ThreadPool.cpp
Client/src/rtype/Systems/: AudioSystem.cpp  MovementSystem.cpp  SpriteSystem.cpp  TransformSystem.cpp
Client/src/rtype/components/: Room.cpp
Client/src/rtype/config/: ArgsConfig.cpp
Client/src/rtype/scenes/: Game.cpp  Lounge.cpp  Menu.cpp  PauseMenu.cpp
Client/tests/: CMakeLists.txt
Client/tests/src/: testClientFactory.cpp
GameEngine/Audio/: CMakeLists.txt
GameEngine/Audio/include/rtype/: IAudioModule.hh
GameEngine/Audio/include/rtype/SFML/: BGMManager.hh  SFMLAudioModule.hh  SFXManager.hh
GameEngine/Audio/src/rtype/: AudioModuleException.cpp  EntryPoint.cpp
GameEngine/Audio/src/rtype/SFML/: BGMManager.cpp  SFMLAudioModule.cpp  SFXManager.cpp
GameEngine/ECS/: CMakeLists.txt
GameEngine/ECS/include/: rtype.hh
GameEngine/ECS/include/rtype/: ComponentManager.hpp  ECSManager.hpp  Entity.hh  EntityManager.hh  IComp.hh  ISparseArray.hh  Registry.hpp  SparseArray.hpp  SystemManager.hh
GameEngine/ECS/include/rtype/Components/: BoxColliderComponent.hh  ClockComponent.hh  HealthComponent.hh  TagComponent.hh  TextureLibraryComponent.hh  TransformComponent.hh
GameEngine/ECS/include/rtype/Systems/: MovementSystem.hh  SpriteSystem.hh
GameEngine/ECS/src/: main.cpp
GameEngine/ECS/src/rtype/: Components.cpp  Entity.cpp  EntityManager.cpp  EntryPoint.cpp  SystemManager.cpp
GameEngine/ECS/src/rtype/Systems/: ColliderSystem.cpp  MovementSystem.cpp  SpriteSystem.cpp  TransformSystem.cpp
GameEngine/Graphics/: CMakeLists.txt
GameEngine/Graphics/include/Manager/: SpriteManager.hpp  TextureManager.hpp
GameEngine/Graphics/include/rtype/: AnimationComponent.hh  AudioManager.hpp  GraphicModule.hh  IGraphicModule.hh  InputManager.hpp  Keys.hh  SceneManager.hpp  SpriteComponent.hh  SpriteManager.hpp  TextureLibraryComponent.hh  TextureManager.hpp  WindowManager.hpp
GameEngine/Graphics/include/rtype/Components/: AnimationComponent.hh  SpriteComponent.hh  TextComponent.hh
GameEngine/Graphics/include/rtype/SFML/: InputManager.hh  SFMLGraphicModule.hh  TextureLibrary.hh
GameEngine/Graphics/src/Manager/: AudioManager.cpp  InputManager.cpp  SceneManager.cpp  SpriteManager.cpp  TextureManager.cpp  WindowManager.cpp
GameEngine/Graphics/src/rtype/: AudioManager.cpp  EntryPoint.cpp  GraphicModule.cpp  InputManager.cpp  SceneManager.cpp  SpriteManager.cpp  TextureManager.cpp  WindowManager.cpp
GameEngine/Graphics/src/rtype/SFML/: InputManager.cpp  SFMLGraphicModule.cpp  TextureLibrary.cpp
GameEngine/Physics/: CMakeLists.txt
GameEngine/Physics/include/rtype/: PhysicsManager.hh
GameEngine/Physics/src/rtype/: EntryPoint.cpp  PhysicsManager.cpp
GameEngine/tests/ECS/: CMakeLists.txt
GameEngine/tests/ECS/src/: testECSManager.cpp  testSparseArray.cpp
GameEngine/tests/Physics/: CMakeLists.txt
GameEngine/tests/Physics/src/: testPhysicsManager.cpp
Network/: CMakeLists.txt
Network/include/rtype/network/: Network.hh
RType-Utils/: CMakeLists.txt
RType-Utils/include/rtype/dlloader/: DlLoader.hpp
RType-Utils/include/rtype/network/: Network.hh  Network.hpp
RType-Utils/include/rtype/utils/: Clock.hh  Color.hh  ThreadPool.hh  Vector2D.hh  Vector2D.hpp  Vector2d.hpp
RType-Utils/src/utils/: Clock.cpp  Colors.cpp  ThreadPool.cpp  Vector2D.cpp
RType-Utils/tests/: CMakeLists.txt
RType-Utils/tests/src/: testsDlLoader.cpp  testsNetwork.cpp
Server/: CMakeLists.txt  README.md
Server/include/: rtype.hh
Server/include/rtype/: Manager.hh  server.hh  utils.hpp
Server/include/rtype/Factory/: ServerEntityFactory.hh
Server/include/rtype/GameLogic/: GameLogic.hh  Room.hh  RoomsManager.hh
Server/include/rtype/clients/: MessageQueue.hh  Player.hh  PlayersManager.hh  ThreadPool.hh
Server/include/rtype/config/: ArgsParser.hh  ConfigsFile.hh
Server/include/rtype/game/: GameManager.hh
Server/level/: LevelTest.json
Server/src/: Manager.cpp  launch.cpp  main.cpp  utils.cpp
Server/src/Factory/: ServerEntityFactory.cpp
Server/src/GameLogic/: GameLogic.cpp  Room.cpp  RoomsManager.cpp
Server/src/GameLogic/EnemySystems/: KamikazeSystem.cpp  SnakeSystem.cpp  UFOSystem.cpp
Server/src/GameLogic/LevelManager/: LevelManager.cpp
Server/src/GameLogic/solo/: Friend.cpp  Solo.cpp
Server/src/clients/: MessageQueue.cpp  Player.cpp  PlayersManager.cpp  ThreadPool.cpp
Server/src/commands/: add_new_player.cpp  end_handler.cpp  input_handler.cpp  lobby_handler.cpp  room_handler.cpp  solo_handler.cpp
Server/src/config/: ArgsParser.cpp  ConfigsFile.cpp
Server/tests/: CMakeLists.txt
Server/tests/src/: main.cpp  testsFactory.cpp  testsUtils.cpp  utils.cpp
Server/tests/src/clients/: testsPlayer.cpp  testsThreadPool.cpp
Server/tests/src/config/: testsArgsParser.cpp
benchmarks/: CMakeLists.txt
benchmarks/src/: BM_ClientFactory.cpp  BM_PlayersManager.cpp  BM_ServerFactory.cpp  BM_ThreadPool.cpp  main.cpp
(+136 files in other folders)
